--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
