--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,16 @@
         <activity android:name=".activities.MainActivity" />
         <activity
             android:name=".activities.ConfiguracoesActivity"
-            android:parentActivityName=".activities.MainActivity"></activity>
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.ChatActivity"
+            android:label="@string/title_activity_main2"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/loginTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.com.jhonicosta.xapp_messenger.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
